--- a/app/src/main/res/xml/preferences_settings.xml
+++ b/app/src/main/res/xml/preferences_settings.xml
@@ -108,11 +108,10 @@
         app:title="@string/more"
         app:icon="@drawable/ic_more">
         <androidx.preference.Preference
-            app:key="share"
+            app:key="@string/key_share"
             app:icon="@drawable/ic_share"
             app:title="@string/share"/>
         <androidx.preference.Preference
-            app:key="more_apps"
             app:icon="@drawable/ic_shop"
             app:title="@string/more_apps">
             <intent
