--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -19,11 +19,14 @@
         <item>@string/italian</item>
         <item>@string/japanese</item>
         <item>@string/polish</item>
+        <item>@string/brazilian_portuguese</item>
         <item>@string/romanian</item>
         <item>@string/russian</item>
         <item>@string/spanish</item>
+        <item>@string/thai</item>
         <item>@string/turkish</item>
         <item>@string/ukrainian</item>
+        <item>@string/traditional_chinese</item>
     </string-array>
     <string-array name="preference_language_values">
         <item>bg</item>
@@ -36,10 +39,13 @@
         <item>it</item>
         <item>ja</item>
         <item>pl</item>
+        <item>pt</item>
         <item>ro</item>
         <item>ru</item>
         <item>es</item>
+        <item>th</item>
         <item>tr</item>
         <item>uk</item>
+        <item>zh-Hant</item>
     </string-array>
 </resources>
