--- a/app/src/main/res/values/untranslatable_strings.xml
+++ b/app/src/main/res/values/untranslatable_strings.xml
@@ -1,5 +1,7 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name" translatable="false">Net Probe</string>
+    <string name="app_full_name" translatable="false">Net Probe for Android</string>
     <string name="mbps">mbps</string>
     <string name="bulgarian" translatable="false">Български</string>
     <string name="english" translatable="false">English</string>
@@ -16,10 +18,8 @@
     <string name="spanish" translatable="false">Español</string>
     <string name="turkish" translatable="false">Türkçe</string>
     <string name="ukrainian" translatable="false">Українська</string>
-    <string name="arch" translatable="false">Arch:</string>
-    <string name="summary_preference_settings_license" translatable="false">General Public License-3.0</string>
-    <string name="copyright" translatable="false">Copyright ©2023-2024, D4rK</string>
-    <string name="feedback_for" translatable="false">Feedback for </string>
-    <string name="dear_developer" translatable="false">Dear developer, </string>
-    <string name="send_email_using" translatable="false">Send mail using:</string>
+    <string name="traditional_chinese" translatable="false">中文</string>
+    <string name="thai" translatable="false">ไทย</string>
+    <string name="brazilian_portuguese" translatable="false">Português (Brasil)</string>
+    <string name="copyright" translatable="false">Copyright ©2023-2025, D4rK</string>
 </resources>
